devel
	2007-10-02 Rob Braun bbraun@synack.net
	* include/xar.h.in lib/io.c lib/io.h lib/archive.c: Add a "streaming" API that allows for file data to be extracted incrementally, like the zlib decompression API, instead of requiring the entire file to fit in memory like xar_extract_tobuffer().  This is the inital commit of the API and may still change.  This change is based on a patch from Charles Srstka.
	2007-09-26 Rob Braun bbraun@synack.net
	* lib/io.c: Consolidate the lseek handling code into one function.
		Contributed by Charles Srstka as part of Issue 2.
	2007-09-21 Rob Braun bbraun@synack.net
	* include/xar.h.in src/xar.c src/xar.1 lib/stat.c: Only extract setuid/setgid bits if the user/group are the same as the archived file (if -p/-P are specified on the command line) OR if the newly added --keep-setuid flag is specified.
	* configure.ac lib/stat.c: Fix the autoconf test for ino_t size, and switch the inode and device number printf's to use the autogenerated INO_STRING and DEV_STRING to get the correct formatting parameter.
	2007-09-20 Rob Braun bbraun@synack.net
	* src/xar.c src/xar.1: Add -k as a synonym for --keep-existing for tar compatibility.
	2007-09-20 Rob Braun bbraun@synack.net
	* src/xar.c src/xar.1: Add --keep-existing flag which prevents existing files from being extracted.
	2007-09-20 Rob Braun bbraun@synack.net
	* lib/archive.c: Fix a bug in toc parsing where invalid tocs, particularly with mismatched closing tags, would still be processed.
	2007-09-20 Rob Braun bbraun@synack.net
	* lib/filetree.c: Fix a minor memory leak with xar_iter_free() not freeing all memory associated with a xar_iter_t.
	2007-09-20 Rob Braun bbraun@synack.net
	* ChangeLog: renamed from CHANGELOG.
	2007-09-19 Dave Leimbach leimy2k@gmail.com
	* xar/xar.c xar/xar.1: Added support for -j and -z as shortcuts for --compression=bzip2 or --compression=zlib respectively.
	2007-09-19 Rob Braun bbraun@synack.net