@@ -34,7 +34,7 @@ The filename to use for creation, listing or extraction.  With extraction, this 
 .TP
 \-\-compression
 Specifies the compression type to use.
-Valid values: none, gzip, bzip2.  Default value: gzip
+Valid values: none, gzip, bzip2, lzma.  Default value: gzip
 .TP
 \-j
 Synonym for \-\-compression=bzip2
