@@ -1,5 +1,7 @@
 devel
 	2007-10-02 Rob Braun bbraun@synack.net
+	*  test/compression test/data include/config.h.in include/xar.h.in src/xar.1 src/xar.c configure.ac lib/lzmaxar.c lib/lzmaxar.h lib/io.c lib/bzxar.c  lib/Makefile.inc.in lib/zxar.c INSTALL: Incorporate a patch from anders.f.bjorklund for adding lzma compression support.
+	2007-10-02 Rob Braun bbraun@synack.net
 	* include/xar.h.in lib/io.c lib/io.h lib/archive.c: Add a "streaming" API that allows for file data to be extracted incrementally, like the zlib decompression API, instead of requiring the entire file to fit in memory like xar_extract_tobuffer().  This is the inital commit of the API and may still change.  This change is based on a patch from Charles Srstka.
 	2007-09-26 Rob Braun bbraun@synack.net
 	* lib/io.c: Consolidate the lseek handling code into one function.
